--- a/AddAVote.resx
+++ b/AddAVote.resx
@@ -338,6 +338,15 @@
   <data name="&gt;&gt;label5.ZOrder" xml:space="preserve">
     <value>7</value>
   </data>
+  <data name="comboBox1.Items" xml:space="preserve">
+    <value>Preferential</value>
+  </data>
+  <data name="comboBox1.Items1" xml:space="preserve">
+    <value>Plurality</value>
+  </data>
+  <data name="comboBox1.Items2" xml:space="preserve">
+    <value>Weighted</value>
+  </data>
   <data name="comboBox1.Location" type="System.Drawing.Point, System.Drawing">
     <value>277, 320</value>
   </data>
